@@ -63,6 +63,7 @@ class tx_igldapssoauth_config {
 
 		$this->be['LDAPAuthentication'] = $EXT_CONFIG['enableBELDAPAuthentication'];
 		$this->be['CASAuthentication'] = 0;
+		$this->be['DeleteCookieLogout'] = 0;
 		$this->be['forceLowerCaseUsername'] = $EXT_CONFIG['forceLowerCaseUsername'] ? $EXT_CONFIG['forceLowerCaseUsername'] : 0;
 		$this->be['evaluateGroupsFromMembership'] = $EXT_CONFIG['evaluateGroupsFromMembership'];
 		$this->be['IfUserExist'] = $EXT_CONFIG['TYPO3BEUserExist'];
@@ -80,8 +81,9 @@ class tx_igldapssoauth_config {
 		$this->be['groups']['basedn'] = $EXT_CONFIG['be_groups_basedn'];
 		$this->be['groups']['filter'] = $EXT_CONFIG['be_groups_filter'];
 		$this->be['groups']['mapping'] = tx_igldapssoauth_config::make_group_mapping($EXT_CONFIG['be_groups_mapping']);
-
+		
 		$this->fe['LDAPAuthentication'] = $EXT_CONFIG['enableFELDAPAuthentication'];
+		$this->fe['DeleteCookieLogout'] = $EXT_CONFIG['DeleteCookieLogout'];
 		$this->fe['CASAuthentication'] = $EXT_CONFIG['enableFECASAuthentication'];
 		$this->fe['forceLowerCaseUsername'] = $EXT_CONFIG['forceLowerCaseUsername'] ? $EXT_CONFIG['forceLowerCaseUsername'] : 0;
 		$this->fe['evaluateGroupsFromMembership'] = $EXT_CONFIG['evaluateGroupsFromMembership'];
